--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jeroennoten/laravel-adminlte": "^3.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "lucascudo/laravel-pt-br-localization": "^1.0",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
